--- a/apps/backend-api/package.json
+++ b/apps/backend-api/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
@@ -13,7 +13,8 @@
     "prisma:seed": "ts-node prisma/seed.ts",
     "prisma:reset": "prisma migrate reset",
     "db:setup": "prisma migrate dev && prisma db seed",
-    "lint": "eslint src --ext .ts"
+    "lint": "eslint src --ext .ts",
+    "postinstall": "prisma generate"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
@@ -30,9 +31,7 @@
     "axios": "^1.6.2",
     "date-fns": "^3.0.0",
     "morgan": "^1.10.0",
-    "helmet": "^7.1.0"
-  },
-  "devDependencies": {
+    "helmet": "^7.1.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
     "@types/cors": "^2.8.17",
@@ -41,8 +40,10 @@
     "@types/qrcode": "^1.5.5",
     "@types/morgan": "^1.9.9",
     "prisma": "^5.7.0",
-    "nodemon": "^3.0.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "ts-node": "^10.9.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
   }
 }
