--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "tsc --watch"
   },
-  "devDependencies": {
+  "dependencies": {
     "typescript": "^5.3.0"
   }
 }
