--- a/apps/admin-web/package.json
+++ b/apps/admin-web/package.json
@@ -22,11 +22,13 @@
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.3.0",
+    "typescript": "^5.3.0"
+  },
+  "devDependencies": {
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.4"
   }
