--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -10,9 +10,7 @@
   },
   "dependencies": {
     "qrcode": "^1.5.3",
-    "date-fns": "^3.0.0"
-  },
-  "devDependencies": {
+    "date-fns": "^3.0.0",
     "@types/qrcode": "^1.5.5",
     "typescript": "^5.3.0"
   }
