--- a/apps/admin-web/package.json
+++ b/apps/admin-web/package.json
@@ -20,9 +20,7 @@
     "date-fns": "^3.0.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
-  },
-  "dependencies": {
+    "postcss": "^8.4.32",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
