--- a/apps/admin-web/vercel.json
+++ b/apps/admin-web/vercel.json
@@ -1,5 +1,6 @@
 {
   "buildCommand": "cd ../.. && npm install && npm run build:packages && cd apps/admin-web && npm run build",
   "outputDirectory": ".next",
-  "installCommand": "cd ../.. && npm install"
+  "installCommand": "cd ../.. && npm install",
+  "framework": "nextjs"
 }
